# mcp-server-jupyter

./: .gitignestignore  .gitignore  .gitingestignore  ARCHITECTURAL_DEEP_DIVE.md  ARCHITECTURAL_REMEDIATION_SUMMARY.md  ARCHITECTURE_REMEDIATION.md  CONSUMER_READY_UX.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  ENVIRONMENT_VARIABLES.md  FAT_VSIX_GUIDE.md  FAT_VSIX_QUICKREF.md  FAT_VSIX_SUMMARY.md  IMPLEMENTATION_GUIDE.md  LICENSE  Leftover_items.md  NOTICE  README.md  README_ENHANCEMENT_TEMPLATE.md  RELEASE_CHECKLIST.md  REMEDIATION_COMPLETE.md  SECURITY.md  SERVER_REMEDIATION.md  UX_FLOW_DIAGRAMS.md  demo.ipynb  example_notebook.ipynb  jupyter_expert_demo.ipynb  mkdocs.yml  package-lock.json  package.json  simple_demo.ipynb  test_minimal_ws.py  test_starlette_routing.py  test_websocket_fix.py  turbo.json
.devcontainer/: devcontainer.json  setup.sh
.github/agents/: Autonomous Jupyter.agent.md  Jupyter Expert.agent.md  Jupyter Expert.md
.github/workflows/: build_binaries.yml  docs.yml  e2e-tests.yml  offline-validation.yml  publish-pypi.yml  sbom-generation.yml
.idx/: dev.nix  mcp.json
docs/: IIRB_REMEDIATION.md  QUICKSTART.md  index.md
docs/comparison/: jupyter.md
k8s/: deployment.yaml  service.yaml
scripts/: build_vendored.sh  generate-sbom.cjs  inject-version.cjs  inspect_notebook.cjs  install.sh  record_demo.ts  record_duckdb_demo.cjs  record_simple.cjs  record_with_debug.cjs
test-results/: .last-run.json
tests/: test_data_tools.py  test_sync_tools.py
tools/mcp-server-jupyter/: COMPLETE_REMEDIATION.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  FINAL_VERIFICATION.md  FRIDAY_MONDAY_FIX.md  HANDOFF_PROTOCOL.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  PRE_MERGE_FIXES.md  README.md  SESSION_DISCOVERY_IMPLEMENTATION.md  SESSION_DISCOVERY_QUICK_REF.md  UX_GAP_CLOSURE.md  docker-entrypoint.sh  integration_results_final.txt  pyproject.toml  test.ipynb  test2.ipynb  test3.ipynb  test_cell_id_tools.py  test_results.txt  test_results_2.txt  test_results_3.txt  test_variable_dashboard_integration.py
tools/mcp-server-jupyter/docs/: PHASE3.1_COMPLETION.md  PHASE3.2_COMPLETION.md
tools/mcp-server-jupyter/mcp_server_jupyter/: __main__.py  asset_manager.py  cell_id_manager.py  config.py  data_tools.py  duckdb_utils.py  environment.py  kernel_lifecycle.py  mcp_types.py  models.py  notebook.py  observability.py  package_manager.py  persistence.py  policy_engine.py  secret_scanner.py  security.py  session.py  utils.py  validation.py
tools/mcp-server-jupyter/mcp_server_jupyter/prompts/: jupyter_expert.md
tools/mcp-server-jupyter/mcp_server_jupyter/tools/: __init__.py  asset_tools.py  cell_tools.py  data_tools.py  diagnostic_tools.py  environment_tools.py  execution_tools.py  filesystem_tools.py  kernel_tools.py  notebook_tools.py  prompts_tools.py  proposal_tools.py  server_tools.py  template_tools.py  variable_tools.py
tools/mcp-server-jupyter/scripts/: build.sh  phase1_validation.sh  publish.sh  pypi-quick-ref.sh  security-check.sh  test-install.sh
tools/mcp-server-jupyter/src/: asset_manager.py  audit_log.py  cell_id_manager.py  checkpointing.py  cli_eject.py  config.py  constants.py  dag_executor.py  data_tools.py  docker_security.py  duckdb_utils.py  environment.py  execution_scheduler.py  git_tools.py  io_multiplexer.py  k8s_manager.py  kernel_lifecycle.py  kernel_manager.py  kernel_startup.py  kernel_state.py  logging_config.py  main.py  models.py  notebook.py  notebook_ops.py  observability.py  package_manager.py  persistence.py  provenance.py  secret_scanner.py  security.py  session.py  telemetry.py  utils.py  validation.py
tools/mcp-server-jupyter/src/prompts/: auto_analyst.md  autonomous_researcher.md  jupyter_expert.md
tools/mcp-server-jupyter/src/tools/: __init__.py  asset_tools.py  data_tools.py  diagnostic_tools.py  environment_tools.py  execution_tools.py  filesystem_tools.py  interaction_tools.py  kernel_tools.py  prompts_tools.py  proposal_tools.py  server_tools.py  state_tools.py  sync_tools.py  template_tools.py  variable_tools.py
tools/mcp-server-jupyter/tests/: __init__.py  conftest.py  harness.py  manual_connect_test.py  test_agent_feedback.py  test_agent_ready_features.py  test_ai_ergonomics.py  test_architectural_fixes.py  test_asset_offload.py  test_async_integration.py  test_audit_log.py  test_broadcasting.py  test_cell_manipulation.py  test_chaos_engineering.py  test_comprehensive_async.py  test_config_and_health.py  test_constants.py  test_dag_executor.py  test_deadlock_recovery.py  test_docker_security.py  test_docker_support.py  test_e2e.py  test_environment.py  test_error_handling.py  test_execution_scheduler.py  test_features_integration.py  test_git_awareness.py  test_heartbeat.py  test_helpers.py  test_hypothesis_state_machine.py  test_iirb_mode_c_contracts.py  test_input_validation.py  test_integration_manual.py  test_io_multiplexer.py  test_kernel_lifecycle.py  test_kernel_recovery.py  test_kernel_startup.py  test_leak_detection.py  test_lightweight_architecture.py  test_mcp_contract.py  (+39 more)
vscode-extension/: .eslintrc.js  .vscodeignore  CHANGELOG.md  INTEGRATION_TESTING.md  LICENSE  QA_CHECKLIST.md  README.md  THE_MISSING_LAYER.md  esbuild.renderer.mjs  package-lock.json  package.json  playwright.config.ts  test-features.js  tsconfig.json  tsconfig.renderer.json
vscode-extension/python_server/: README.md  pyproject.toml  requirements.txt
vscode-extension/python_server/src/: asset_manager.py  config.py  dag_executor.py  data_tools.py  docker_security.py  environment.py  execution_scheduler.py  git_tools.py  io_multiplexer.py  kernel_lifecycle.py  kernel_startup.py  kernel_state.py  main.py  models.py  notebook.py  observability.py  secret_scanner.py  security.py  session.py  utils.py  validation.py
vscode-extension/python_server/src/tools/: __init__.py  asset_tools.py  cell_tools.py  data_tools.py  filesystem_tools.py  kernel_tools.py  notebook_tools.py  prompts_tools.py  proposal_tools.py  sync_tools.py  variable_tools.py
vscode-extension/python_server/vscode-extension-src/: variableDashboard.ts
(+95 files in other folders)
