[tool.poetry]
name = "mcp-server-jupyter"
version = "0.3.0"
description = "A server to manage Jupyter kernels for the MCP-Jupyter VS Code extension."
authors = ["MCP Jupyter Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = ">=0.111.0"
uvicorn = {extras = ["standard"], version = ">=0.30.0"}
starlette = ">=0.37.0"
websockets = ">=12.0"
python-json-logger = ">=2.0.7"
# Core Jupyter
jupyter-client = ">=8.6.0"
jupyter-core = ">=5.7.0"
nbformat = ">=5.10.0"
ipykernel = ">=6.29.0"
mcp = ">=0.1.0"
# Utilities
psutil = ">=5.9.0"
pydantic = ">=2.7.0"
pydantic-settings = ">=2.2.0"
structlog = ">=24.1.0"

[tool.poetry.group.superpowers.dependencies]
# Optional superpowers for advanced data analysis
duckdb = ">=1.0.0"
pandas = ">=2.2.0"
numpy = ">=1.26.0"
# Runtime dependencies for session persistence and runtime helpers
# dill = ">=0.3.6"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.0"
pytest-asyncio = ">=0.23.0"
pytest-xdist = ">=3.6.0"
pytest-cov = ">=5.0.0"
pytest-timeout = ">=2.3.0"
pytest-rerunfailures = ">=14.0"
hypothesis = ">=6.100.0"
pip-audit = ">=2.7.0"
loguru = ">=0.7.2"
# Linting
black = ">=24.4.0"
ruff = ">=0.4.0"
mypy = ">=1.10.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
testpaths = ["tests"]
# Automatically rerun failed tests up to 5 times with 2 second delay
# This helps with flaky kernel startup during parallel execution
reruns = 5
reruns_delay = 2
markers = [
  "optional: marks tests as optional (heavy integration tests)",
  "slow: marks tests as slow",
  "resource_intensive: marks tests that consume significant resources",
  "e2e: marks tests as end-to-end tests",
  "integration: marks tests as integration tests",
  "flaky: marks tests as potentially flaky (auto-retried)",
  "flaky_kernel: marks tests involving kernel operations (auto-retried)"
]
filterwarnings = [
  "ignore::DeprecationWarning:jupyter_client.*:",
  "ignore::DeprecationWarning:dateutil.*:",
  "ignore:Please use `import python_multipart` instead.:PendingDeprecationWarning:starlette.formparsers",
  "ignore::nbformat.validator.MissingIDFieldWarning",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"