[tool.poetry]
name = "mcp-server-jupyter"
version = "0.1.0"
description = "A MCP server for executing Jupyter Notebooks"
authors = ["Antigravity <antigravity@example.com>"]
readme = "README.md"
packages = [{include = "src"}]
# [CRITICAL] Ensure non-python files in src are included
include = ["src/prompts/*.md"]

[tool.poetry.dependencies]
python = "^3.10"
mcp = "^1.0.0"
jupyter_client = "^8.0.0"
nbformat = "^5.0.0"
ipykernel = "^6.0.0"
psutil = "^5.9.0"
GitPython = "^3.1.0"
uvicorn = {version = "^0.40.0", extras = ["standard"]}
starlette = "^0.51.0"
websockets = "^14.0"
structlog = "^24.1.0"
pydantic = "^2.0.0"

[tool.poetry.extras]
superpowers = ["duckdb"]

[tool.poetry.group.superpowers]
optional = true

[tool.poetry.group.superpowers.dependencies]
duckdb = "^1.1.0"

[tool.poetry.scripts]
mcp-jupyter = "src.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-xdist = "^3.5.0"
pytest-cov = "^4.1.0"
pytest-timeout = "^2.2.0"
hypothesis = "^6.92.0"
black = "^24.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
timeout = 120
# Silence known environment-specific warnings:
# - PytestConfigWarning: Unknown config option: timeout
#   (occurs when pytest-timeout plugin isn't installed in a local env)
# - MissingIDFieldWarning: emitted by nbformat when tests intentionally create
#   notebooks without 'id' fields (we test heal-on-write behavior)
filterwarnings = [
    "ignore::pytest.PytestConfigWarning",
    "ignore::nbformat.validator.MissingIDFieldWarning"
]
markers = [
    "optional: marks tests as optional (heavy integration tests requiring matplotlib/pandas)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring real kernel"
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__pycache__/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:"
]
show_missing = true

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

